Fix loader always visible due to CSS display:flex overriding hidden attribute

--- a/styles.css
+++ b/styles.css
@@ -718,9 +718,12 @@ a {
 }
 
 .gallery-loader {
-  display: flex;
   justify-content: center;
   padding: 2rem 0;
+}
+
+.gallery-loader:not([hidden]) {
+  display: flex;
 }
 
 .gallery-loader-svg {
